# Web_API-Based_RAG_in_AWS

./: .gitignore  README.md  pyproject.toml  request.json
Kendra_testdata/: 天気1.txt  天気2.txt  天気3.csv
container/: Dockerfile  app.py  requirements.txt
